# RTSim

./: .clang-format  CMakeLists.txt  CMakePresets.json  createVS.cmd  readme.md
Backend/: CMakeLists.txt
Backend/src/Backend/: Backend.cpp  LayerBackend.cpp  LayerBackend.h
Engine/: CMakeLists.txt  CMakeLists.txt_2version
Engine/cmake/: EngineConfig.cmake.in
Engine/include/Engine/: Application.h  Core.h  EntryPoint.h  FrameworkServices.h  ILayer.h  IPlugin.h  LayerStack.h  PlatformAbstraction.h  PluginManager.h  Services.h  ThreadManager.h  ThreadMonitor.h
Engine/include/Engine/Plugin/: Config.h  PluginLoader.h  PluginManager.h  PortManager.h  Property.h
Engine/include/Engine/Utils/: UUID.h  Utils.h
Engine/include/Plugin/: IPlugin.h  PluginCommon.h
Engine/src/Engine/: Application.cpp  Core.cpp  LayerStack.cpp  PlatformAbstraction.cpp  PluginManager.cpp  Services.cpp  ThreadManager.cpp  ThreadMonitor.cpp
Engine/src/Engine/Plugin/: PluginLoader.cpp  PluginManager.cpp  PortManager.cpp
Engine/src/Utils/: UUID.cpp
Frontend/: CMakeLists.txt
Frontend/src/Frontend/: Frontend.cpp
Plugins/: CMakeLists.txt
Plugins/PluginTemplate/: CMakeLists.txt
Plugins/PluginTemplate/src/: MyFirstPlugin.cpp  MyFirstPlugin.h
cmake/: folder_structure.cmake
docs/: architecture.md  status.md
